# sets-in-coq

./: README.md  _CoqProject  coq-sets.opam  dune-project
theories/sets/: Ensemble.v  Functions.v  List.v  dune
