opam-version: "2.0"
maintainer: "traian.serbanuta@gmail.com"
version: "dev"

homepage: "https://github.com/traiansf/coq-sets"
dev-repo: "git+https://github.com/traiansf/coq-sets.git"
bug-reports: "https://github.com/traiansf/coq-sets/issues"
license: "MIT"

synopsis: "Coq formalization of basic set theory"
description: """
Basic set theory formalization employing Ensemble-like structures and
stdpp set notations."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {>= "8.15"}
  "coq-stdpp" {>= "1.8.0"}
]

tags: [
  "keyword:sets"
  "keyword:ensembles"
]
authors: [
  "Traian Florin Șerbănuță"
]
